MapBInIO close() method fixed, Tile initialize undefined behaviour fixed, json library linked

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,5 +4,7 @@ add_library(Dune2kMapApi
     structures/map.cpp
     file/map_bin_io.cpp
     )
+
+target_link_libraries(Dune2kMapApi PRIVATE nlohmann_json::nlohmann_json)
 target_include_directories(Dune2kMapApi PUBLIC 
     ${CMAKE_CURRENT_SOURCE_DIR}/../include)
