--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,9 @@ add_library(Dune2kMapApi
     structures/map.cpp
     file/map_bin_io.cpp
     file/tileset_json_i.cpp
+    tileset/palette/material.cpp
+    tileset/palette/palette.cpp
+    tileset/palette/tileset_properties.cpp
     )
 
 target_link_libraries(Dune2kMapApi PRIVATE nlohmann_json::nlohmann_json)
