--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,16 @@
 project(Dune2kMapApi)
 add_library(Dune2kMapApi
     structures/map.cpp
-    file/map_bin_io.cpp
+    file/file_reader.cpp
+    file/file_checks.cpp
+    file/map_bin_file_io.cpp
     file/tileset_json_i.cpp
     tileset/palette/material.cpp
     tileset/palette/palette.cpp
-    tileset/palette/tileset_properties.cpp
     )
 
 target_link_libraries(Dune2kMapApi PRIVATE nlohmann_json::nlohmann_json)
-target_include_directories(Dune2kMapApi PUBLIC 
-    ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+
+target_include_directories(Dune2kMapApi 
+                            PUBLIC 
+                            ${CMAKE_CURRENT_SOURCE_DIR}/../include)
