--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(Dune2kMapApi
     tileset/palette/material.cpp
     tileset/palette/palette.cpp
     tileset/blocks/compatible_checker.cpp
+    tileset/blocks/edge.cpp
     paint/painter.cpp
     )
 
